# microsoft-speecht5-tts-service

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
