[project]
name = "microsoft-speecht5-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers==4.37.2",
    "torch==2.2.0",
    "soundfile==0.12.1",
    "datasets==2.17.1",
    "flask==3.0.2",
    "playsound3==3.2.3",
    "numpy<2.0.0",
    "sentencepiece==0.2.0"
]
